--- a/estac3/assets/css/main.css
+++ b/estac3/assets/css/main.css
@@ -72,6 +72,13 @@
   }
 }
 
+/* LISTA */
+#lista{
+  padding: 2em;
+  
+}
+/* FIM LISTA */
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -737,12 +744,12 @@ progress {
   }
 }
 
-.row {
+.row1{
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
-  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-top: -2.8em;
   margin-right: calc(-.5 * var(--bs-gutter-x));
   margin-left: calc(-.5 * var(--bs-gutter-x));
 }
