--- a/estac3/assets/css/main.css
+++ b/estac3/assets/css/main.css
@@ -72,13 +72,6 @@
   }
 }
 
-/* LISTA */
-#lista{
-  padding: 2em;
-  
-}
-/* FIM LISTA */
-
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -744,12 +737,12 @@ progress {
   }
 }
 
-.row1{
+.row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
-  margin-top: -2.8em;
+  margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-.5 * var(--bs-gutter-x));
   margin-left: calc(-.5 * var(--bs-gutter-x));
 }
